--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecetApp</string>
+    <string name="recipe_thumbnail_description">An image for recipe</string>
 </resources>
