--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RecetApp</string>
     <string name="recipe_thumbnail_description">An image for recipe</string>
+    <string name="tap_to_retry">Tap to retry.</string>
+    <string name="error_image_description">An icon for error.</string>
 </resources>
