--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="tap_to_retry">Tap to retry.</string>
     <string name="error_image_description">An icon for error.</string>
     <string name="an_image_for_recipe_detail">An image for recipe detail.</string>
+    <string name="ingredients">Ingredients</string>
 </resources>
