--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="error_image_description">An icon for error.</string>
     <string name="an_image_for_recipe_detail">An image for recipe detail.</string>
     <string name="ingredients">Ingredients</string>
+    <string name="floating_action_button">floating action button</string>
 </resources>
