--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="an_image_for_recipe_detail">An image for recipe detail.</string>
     <string name="ingredients">Ingredients</string>
     <string name="floating_action_button">floating action button</string>
+    <string name="no_items_to_display">No items to display.</string>
 </resources>
