--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="ingredients">Ingredients</string>
     <string name="floating_action_button">floating action button</string>
     <string name="no_items_to_display">No items to display.</string>
+    <string name="search_by_name_or_ingredients">Search by name or ingredients.</string>
 </resources>
